3671.	[bug]		Don't allow dnssec-importkey overwrite a existing
			non-imported private key.

3670.	[bug]		Address read after free in server side of
			lwres_getrrsetbyname. [RT #29075]

3669.	[port]		freebsd: --with-gssapi needs -lhx509. [RT #35001]

3668.	[bug]		Fix cast in lex.c which could see 0xff treated as eof.
			[RT #34993]

3667.	[test]		dig: add support to keep the TCP socket open between
			successive queries (+[no]keepopen).  [RT #34918]

3665.	[bug]		Failure to release lock on error in receive_secure_db.
			[RT #34944]

3664.	[bug]		Updated OpenSSL PKCS#11 patches to fix active list
			locking and other bugs. [RT #34855]

3663.	[bug]		Address bugs in dns_rdata_fromstruct and
			dns_rdata_tostruct for WKS and ISDN types. [RT #34910]

3662.	[bug]		'host' could die if a UDP query timed out. [RT #34870]

3661.	[bug]		Address lock order reversal deadlock with inline zones.
			[RT #34856]

3660.	[cleanup]	Changed the name of "isc-config.sh" to "bind9-config".
			[RT #23825]

3659.	[port]		solaris: don't add explict dependancies/rules for
			python programs as make won't use the implicit rules.
			[RT #34835]

3658.	[port]		linux: Address platform specific compilation issue
			when libcap-devel is installed. [RT #34838]

3657.	[port]		Some readline clones don't accept NULL pointers when
			calling add_history. [RT #34842]

3656.	[bug]		Treat an all zero netmask as invalid when generating
			the localnets acl. [RT #34687]

3655.	[cleanup]	Simplify TCP message processing when requesting a
			zone transfer.  [RT #34825]

3654.	[bug]		Address race condition with manual notify requests.
			[RT #34806]

3653.	[func]		Create delegations for all "children" of empty zones
			except "forward first". [RT #34826]

3651.	[tuning]	Adjust when a master server is deemed unreachable.
			[RT #27075]

3650.	[tuning]	Use separate rate limiting queues for refresh and
			notify requests. [RT #30589]

3649.	[cleanup]	Include a comment in .nzf files, giving the name of