@@ -34,6 +34,7 @@ options {
 	deny-answer-aliases { "example.org"; }
 		except-from { "goodcname.example.net";
 			      "gooddname.example.net"; };
+	allow-query {!10.53.0.8; any; };
 };
 
 zone "." {
