@@ -1,3 +1,6 @@
+3672.	[func]		Local address can now be specified when using
+			dns_client API. [RT #34811]
+
 3671.	[bug]		Don't allow dnssec-importkey overwrite a existing
 			non-imported private key.
 
